--- a/.github/workflows/reuseable-workflow-called.yaml
+++ b/.github/workflows/reuseable-workflow-called.yaml
@@ -6,14 +6,14 @@ on:
 
 jobs:
   call-workflow-A:
-    uses: .github/workflows/blue-workflow-caller.yaml
+    uses: ./.github/workflows/blue-workflow-caller.yaml
     with:
       username: Blue
     secrets:
       token: ${{ secrets.CICD_GIT_TOKEN }}
 
   call-workflow-B:
-    uses: .github/workflows/green-workflow-caller.yaml
+    uses: ./.github/workflows/green-workflow-caller.yaml
     with:
       username: Red
     secrets:
