--- a/.github/workflows/blue-workflow-caller.yaml
+++ b/.github/workflows/blue-workflow-caller.yaml
@@ -13,6 +13,7 @@ on:
 jobs:
   reusable_workflow_job:
     runs-on: ubuntu-latest
+    if:  ${{ inputs.username }} == 'Blue'
 
     steps:
       - name: Hello User
